# PoSDK

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  dummy_posdk_agg.cpp  install.sh  verify_PoSDK_github.sh  version.hpp.in
cmake/: FindOpenGV.cmake
common/: CMakeLists.txt
common/converter/: CMakeLists.txt  COLMAP_FORMAT_ANALYSIS.md  OUTPUTPOSDK2COLMAP_VERSION_COMPARISON.md  converter_base.hpp  converter_colmap_file.cpp  converter_colmap_file.hpp  converter_opencv.cpp  converter_opencv.hpp  converter_opengv.cpp  converter_opengv.hpp  converter_openmvg_file.cpp  converter_openmvg_file.hpp
common/converter/colmap_io/colmap/scene/: reconstruction.h
common/converter/colmap_io/glomap/math/: two_view_geometry.h
common/converter/colmap_io/glomap/scene/: camera.h  image.h
common/image_viewer/: CMakeLists.txt  image_viewer.cpp  image_viewer.hpp
dependencies/: ANACONDA_ENVIRONMENT_CHECK.md  GLOMAP_BOOST_FIX_DETAILED.md  GLOMAP_BOOST_LINK_ERROR_ANALYSIS.md  README.md  download_cmake.sh  download_dependencies.sh  download_po_core.sh  install_absl.sh  install_boost.sh  install_ceres.sh  install_cmake.sh  install_colmap.sh  install_dependencies.sh  install_glomap.sh  install_graphoptim.sh  install_magsac.sh  install_nlohmann.sh  install_opencv.sh  install_opengv.sh  install_openmvg.sh  install_poselib.sh  install_protobuf.sh
docs/: Makefile  install_docs.sh  requirements.txt
docs/source/: conf.py  copyright_tracking.md  index.rst  introduction.md  team.md  version_history.md
docs/source/_static/: debug-task-list.js  task-list.js
docs/source/advanced_development/: configuration_files.md  data_mapping_exceptions.md  evaluator_manager.md  index.md  plugin_derivation_choices.md  profiler.md  robust_estimators.md  serialization.md
docs/source/appendices/: appendix_a_types.md  appendix_b_utils.md  appendix_e_logging.md  index.md
docs/source/basic_development/: behavior_plugins.md  data_plugins.md  data_types.md  index.md  method_example.md  method_plugins.md  plugin_list.md  prior_and_gt.md
docs/source/benchmark_comparison/: index.md
docs/source/converters/: colmap_converter.md  index.md  opencv_converter.md  opengv_converter.md  openmvg_converter.md
docs/source/coords_and_poses/: index.md
docs/source/faq/: general.md  index.md
docs/source/installation/: index.md  installation.md  po_core_build_environment.md  using_precompiled.md
docs/source_zh/: conf.py  copyright_tracking.md  index.rst  introduction.md  team.md  version_history.md
docs/source_zh/_static/: custom.css
docs/source_zh/faq/: general.md  (+1 more)
plugins/: CMakeLists.txt  EXAMPLE_OPTIONAL_PLUGIN.txt  PLUGIN_BUILD_FAULT_TOLERANCE.md
plugins/cmake/: PLUGIN_CMAKE_USAGE.md  plugin-config.cmake
plugins/data/: CMakeLists.txt  DataExample.cpp  DataExample.hpp
plugins/methods/: CMakeLists.txt
plugins/methods/BarathTwoViewEstimator/: CMakeLists.txt  barath_two_view_estimator.cpp  barath_two_view_estimator.hpp  barath_two_view_estimator.ini
plugins/methods/GLOMAP/: CMakeLists.txt  COLMAP_README.md  colmap_pipeline.cpp  colmap_pipeline.hpp  colmap_pipeline.ini  colmap_pipeline.py  export_camera_poses_from_db.py  export_global_poses_from_db.py  export_global_poses_from_model.py  export_matches_from_db.py  glomap_pipeline.cpp  glomap_pipeline.hpp  glomap_pipeline.ini  glomap_pipeline.py  load_colmap_db.py
plugins/methods/GlobalSfMPipeline/: CMakeLists.txt  GlobalSfMPipelineParams.cpp  GlobalSfMPipelineParams.hpp  globalsfm_pipeline.cpp  globalsfm_pipeline.hpp  globalsfm_pipeline.ini
plugins/methods/Img2Features/: CMakeLists.txt  ENVIRONMENT_SETUP.md  QUICK_FIX.md  README.md  configure_lightglue_env.sh  fix_numpy_compatibility.sh  img2features_pipeline.cpp  img2features_pipeline.hpp  method_img2features.ini  method_img2features_plugin_superpoint.py  requirements.txt  test_environment.py
plugins/methods/Img2Matches/: CMakeLists.txt  FASTCASCADEHASHINGL2.cpp  FASTCASCADEHASHINGL2.hpp  FASTCASCADEHASHINGL2_IMPLEMENTATION.md  IMAGE_INDEXING_CONSISTENCY_FIX.md  Img2MatchesParams.cpp  Img2MatchesParams.hpp  LIGHTGLUE_INTEGRATION.md  LIGHTGLUE_TEST_CONFIG.md  LightGlueMatcher.cpp  LightGlueMatcher.hpp  OPENMVG_ALIGNMENT_REPORT.md  README.md  REFACTOR_SUMMARY.md  SIFT_ENHANCEMENTS.md  SIFT_FEATURE_EXTRACTION_COMPARISON.md  VIEWER_FAST_MODE_CONSISTENCY_FIX.md  img2matches_fast_mode.cpp  img2matches_pipeline.cpp  img2matches_pipeline.hpp  img2matches_viewer_mode.cpp  lightGlueChatMsg.md  lightglue_matcher.py  method_img2matches.ini  openmvg_result.txt  posdk_fast_result.txt  posdk_viewer_result.txt  superpoint_extractor.py  tmp_result.txt
plugins/methods/MethodCalibrator/: CMakeLists.txt  CirclesPatternDetector.hpp  method_calibrator.ini  method_calibrator_plugin.cpp  method_calibrator_plugin.hpp
plugins/methods/MethodMatchesVisualizer/: CMakeLists.txt  method_matches_visualizer.cpp  method_matches_visualizer.hpp  method_matches_visualizer.ini
plugins/methods/MethodRotationAveraging/: CMakeLists.txt  method_rotation_averaging.cpp  method_rotation_averaging.hpp  method_rotation_averaging.ini
plugins/methods/MethodRotationAveragingChatterjee/: CMakeLists.txt  method_rotation_averaging_Chatterjee.cpp  method_rotation_averaging_Chatterjee.hpp
plugins/methods/MethodRotationAveragingChatterjee/chatterjee/: L1ADMM.h  rotation.h
plugins/methods/OpenCVTwoViewEstimator/: CMakeLists.txt  opencv_two_view_estimator.cpp  opencv_two_view_estimator.hpp  opencv_two_view_estimator.ini
plugins/methods/OpenGVModelEstimator/: CMakeLists.txt  opengv_model_estimator.cpp  opengv_model_estimator.hpp  opengv_model_estimator.ini
plugins/methods/OpenMVGPipeline/: CMakeLists.txt  openmvg_pipeline.cpp  openmvg_pipeline.hpp  openmvg_pipeline.ini
plugins/methods/PoseLibModelEstimator/: CMakeLists.txt  POSELIB_FIX.md  poselib_model_estimator.cpp  poselib_model_estimator.hpp  poselib_model_estimator.ini
plugins/methods/TwoViewEstimator/: CMakeLists.txt  TwoViewEstimator.cpp  TwoViewEstimator.hpp  TwoViewEstimator.ini
software/: CMakeLists.txt  README.md  posdk_globalsfm.cpp
tests/: download_Strecha.sh
(+75 files in other folders)
